@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class Router {
}

class ShopController {
    - _shopRepository: IShopRepositories
    + CreateShop(CreateShopRequestDTO createShop): Task<IActionResult>
}

interface IShopRepositories<<interface>> {
    + CreateShop(CreateShopRequestDTO createShop): Task<GetShopResponseDTO>
}

class ShopRepositories {
    - _shopDao: ShopDAO
    + CreateShop(CreateShopRequestDTO createShop): Task<GetShopResponseDTO>
}

class ShopDAO {
    - _client.From<Shop> : ISupabaseTable<Shop>
    - _client.From<Profile> : ISupabaseTable<Profile>
    - _client.From<Subscriptions> : ISupabaseTable<Subscriptions>
    + CreateShop(CreateShopRequestDTO createShop): Task<GetShopResponseDTO>
    + GetShopById(Guid shopId): Task<Shop>
    + IsShopNameExists(string name): Task<bool>

}


class Shop {
    + Id: Guid
    + Name: string
    + Address: string
    + Description: string
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + OwnerId: Guid
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}

class Subscriptions {
    + Id: Guid
    + Name: string
    + Price: decimal
    + Description: string
    + NumberOfMonths: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway --  Router
Router -- ShopController
ShopController -- IShopRepositories
IShopRepositories <|-- ShopRepositories
ShopRepositories "1"--"1..*" ShopDAO
ShopDAO "1" -- "0..*" Shop
ShopDAO -- Profile
ShopDAO -- Subscriptions
@enduml
